--- a/report/report.tex
+++ b/report/report.tex
@@ -120,7 +120,7 @@
 %\addcontentsline{toc}{chapter}{nomenclature}
 
 \mainmatter % book mode only
-%\include{Abstract/abstract}
+\include{Abstract/abstract}
 
 \parskip 6pt
 
