--- a/report/Appendix1/appendix1.tex
+++ b/report/Appendix1/appendix1.tex
@@ -385,69 +385,145 @@ Further rephrasing of lifted sentences, such as the last one, could be beneficia
 \item{dog: IsA $\rightarrow$ dog}
 \end{itemize}
 
-\section{Evaluation Poems}
+\section{Evaluation}
+
+\subsection{Edward Lear}
+\ref{sec:lear}
+There was an old man with a beard\\
+Who said, "It's just as I feared!\\
+Two owls and a hen,\\
+Four larks and a wren\\
+Are making a nest in my beard!"\\
+
+There was a Young Lady of Ryde,\\
+Whose shoe-strings were seldom untied.\\
+She purchased some clogs,\\
+And some small spotted dogs,\\
+And frequently walked about Ryde.\\
+
+
+There was an Old Man with a nose,\\
+Who said, 'If you choose to suppose,\\
+That my nose is too long,\\
+You are certainly wrong!'\\
+That remarkable Man with a nose.\\
+
+There was an Old Man on a hill,\\
+Who seldom, if ever, stood still;\\
+He ran up and down,\\
+In his Grandmother's gown,\\
+Which adorned that Old Man on a hill.\\
+
+There was a Young Lady whose bonnet,\\
+Came untied when the birds sate upon it;\\
+But she said: 'I don't care!\\
+All the birds in the air\\
+Are welcome to sit on my bonnet!'\\
+
+
+There was a Young Person of Smyrna,\\
+Whose Grandmother threatened to burn her;\\
+But she seized on the cat,\\
+And said, 'Granny, burn that!\\
+You incongruous Old Woman of Smyrna!'\\
+
+
+There was an Old Person of Chili,\\
+Whose conduct was painful and silly,\\
+He sate on the stairs,\\
+Eating apples and pears,\\
+That imprudent Old Person of Chili.\\
+
+
+There was an Old Man with a gong,\\
+Who bumped at it all day long;\\
+But they called out, 'O law!\\
+You're a horrid old bore!'\\
+So they smashed that Old Man with a gong.\\
+
+There was an Old Lady of Chertsey,\\
+Who made a remarkable curtsey;\\
+She twirled round and round,\\
+Till she sunk underground,\\
+Which distressed all the people of Chertsey.\\
+
+There was an Old Man in a tree,\\
+Who was horribly bored by a Bee;\\
+When they said, 'Does it buzz?'\\
+He replied, 'Yes, it does!'\\
+'It's a regular brute of a Bee!'\\
 
 \subsection{The Book of Limericks}
 \ref{sec:book}
-There was an old woman of Lynn,
-Whose nose very near reach'd her chin;
-You may easy suppose
-She had plenty of beaux,
-This charming old woman of Lynn.
+There was an old woman of Lynn,\\
+Whose nose very near reach'd her chin;\\
+You may easy suppose\\
+She had plenty of beaux,\\
+This charming old woman of Lynn.\\
 
-There was an old woman of Gloster,
-Whose parrot two guineas it cost her;
-But his tongue never ceasing,
-Was vastly displeasing,
-To that talkative woman of Gloster.
+There was an old woman of Gloster,\\
+Whose parrot two guineas it cost her;\\
+But his tongue never ceasing,\\
+Was vastly displeasing,\\
+To that talkative woman of Gloster.\\
 
-There was a sick man of Tobago,
-Lived long on rice-gruel and sago;
-But at last, to his bliss,
-The physician said this:
-'To a roast leg of mutton you may go.'
+There was a sick man of Tobago,\\
+Lived long on rice-gruel and sago;\\
+But at last, to his bliss,\\
+The physician said this:\\
+'To a roast leg of mutton you may go.'\\
 
-There was an old miser of Reading,
-Had a house with a yard, with a shed in;
-'Twas meant for a cow,
-But so small that I vow
-The poor creature could scarce get its head in.
+There was an old miser of Reading,\\
+Had a house with a yard, with a shed in;\\
+'Twas meant for a cow,\\
+But so small that I vow\\
+The poor creature could scarce get its head in.\\
 
-There was a young person in pink,
-Who called out for something to drink;
-But they said, 'O my daughter,
-There's nothing but water!'
-Which vexed that young person in pink.
+There was a young person in pink,\\
+Who called out for something to drink;\\
+But they said, 'O my daughter,\\
+There's nothing but water!'\\
+Which vexed that young person in pink.\\
 
-There was an old person of Sheen,
-Whose expression was calm and serene;
-He sat in the water,
-And drank bottled porter,
-That placid old person of Sheen.
+There was an old person of Sheen,\\
+Whose expression was calm and serene;\\
+He sat in the water,\\
+And drank bottled porter,\\
+That placid old person of Sheen.\\
 
-There was an old person of Florence,
-Who held mutton chops in abhorrence;
-He purchased a bustard,
-And fried him in mustard,
-Which choked that old person of Florence.
+There was an old person of Florence,\\
+Who held mutton chops in abhorrence;\\
+He purchased a bustard,\\
+And fried him in mustard,\\
+Which choked that old person of Florence.\\
 
-There was an old person of Loo,
-Who said, 'What on earth shall I do?'
-When they said, 'Go away!'
-She continued to stay,
-That vexatious old person of Loo.
+There was an old person of Loo,\\
+Who said, 'What on earth shall I do?'\\
+When they said, 'Go away!'\\
+She continued to stay,\\
+That vexatious old person of Loo.\\
 
-There was an old man of Spithead,
-Who opened the window and said - 
-'Fil-jomble, fil-jumble,
-Fil-rumble-come-tumble!'
-That doubtful old man of Spithead.
+There was an old man of Spithead,\\
+Who opened the window and said - \\
+'Fil-jomble, fil-jumble,\\
+Fil-rumble-come-tumble!'\\
+That doubtful old man of Spithead.\\
 
-There was an old person of Brigg,
-Who purchased no end of a Wig;
-So that only his nose
-And the end of his toes
-Could be seen when he waled about Brigg.
+There was an old person of Brigg,\\
+Who purchased no end of a Wig;\\
+So that only his nose\\
+And the end of his toes\\
+Could be seen when he waled about Brigg.\\
+
+\subsection{Limerick sources}
+\label{sec:app-source}
+\begin{itemize}
+\item{http://www.poetry4kids.com/blog/lessons/how-to-write-a-limerick/}
+\item{http://www.gigglepoetry.com/poetryclassdetail.aspx?LessonPlanID=2}
+\item{http://www.creative-writing-now.com/how-to-write-a-limerick.html}
+\item{http://www.poetryteachers.com/poetclass/lessons/limerick.html}
+\item{http://freespace.virgin.net/merrick.sheldon/limerickrules.htm}
+\end{itemize}
 
 % ------------------------------------------------------------------------
 
