--- a/report/Implementation/implementation.tex
+++ b/report/Implementation/implementation.tex
@@ -14,6 +14,7 @@ In deciding how to approach this phase, we need to make predictions about the us
 
 
 \subsection{The Corpus}
+\label{sec:corpus}
 
 The corpus is a large collection of poems. We may assume that each poem is already marked with the \textit{type} of the collection - limerick, haiku, riddle etc. - much like data in a supervised machine learning problem. However, the poems should otherwise be \textit{unseen} before analysis; we know nothing else about them. 
 
@@ -239,7 +240,7 @@ A noteworthy subset of the results are shown in Figures \ref{fig:rhyme-scheme-ch
 \label{fig:overall-tense-chart}
 \end{figure}
 
-The results of these and other corpora will be explored fully in the Evaluation. It is sufficient for the moment to say that these are good results because they match sufficiently to known poetry theory. They are also usable in the generation phase to apply rules but also guides us on the strength of these rules, suggesting where divergence may be applicable.
+The results of these and other corpora will be explored fully in the Evaluation. It is sufficient for the moment to say that these results are usable in the generation phase to apply rules but also guides us on the strength of these rules, suggesting where divergence may be applicable.
 
 
 % ------------------------------------------------------------------------
